# ai-training

./: LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
.github/: CODEOWNERS
deep-learning/convolutional-neural-network/: convolutional_neural_network.ipynb
hugging-face/transformers/: behind-the-pipeline.ipynb
hugging-face/transformers/behind-the-pipeline/: behind-the-pipeline.ipynb
hugging-face/transformers/handling-multiple-sequences/: handling-multiple-sequences.ipynb
hugging-face/transformers/models/: models.ipynb
hugging-face/transformers/optimized-inference-deployment/: optimized-inference-deployment.ipynb  test.py
hugging-face/transformers/putting-it-all-together/: putting-it-all-together.ipynb
hugging-face/transformers/tokenizers/: tokenizers.ipynb
machine-learning/association-rule-learning/01-apriori/: apriori.ipynb
machine-learning/association-rule-learning/02-eclat/: eclat.ipynb
machine-learning/association-rule-learning/apriori/: apriori.ipynb
machine-learning/association-rule-learning/eclat/: eclat.ipynb
machine-learning/classification/01-logistic-regression/: logistic_regression.ipynb
machine-learning/classification/02-k-nearest-neighbors/: k_nearest_neighbors-copy.ipynb  k_nearest_neighbors.ipynb
machine-learning/classification/03-support-vector-machine/: support_vector_machine.ipynb
machine-learning/classification/04-kernel-support-vector-machine/: kernel_svm.ipynb
machine-learning/classification/06-decision-tree-classification/: decision_tree_classification.ipynb
machine-learning/classification/08-model-selection/: k_nearest_neighbors.ipynb  kernel_svm.ipynb  random_forest_classification.ipynb
machine-learning/classification/08_model_selection/: decision_tree_classification.ipynb  logistic_regression.ipynb  naive_bayes.ipynb
machine-learning/classification/model-selection/: support_vector_machine.ipynb
machine-learning/classification/naive-bayes/: naive_bayes.ipynb
machine-learning/classification/random-forest-classification/: random_forest_classification.ipynb
(+50 files in other folders)
