[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengood.ai_training"
version = "1.0.0"
description = "Source for AI training for AI engineering and data science enablement"
authors = [
    { name = "OpenGood", email = "ai@opengood.ai" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "matplotlib >= 3.10.1",
    "nltk >= 3.9.1",
    "numpy >= 2.2.6",
    "opengood.py-ml-plot >= 1.10.0",
    "pandas >= 2.2.3",
    "scikit-learn >= 1.6.1",
    "statsmodels >= 0.14.4",
]

[project.urls]
Homepage = "https://github.com/opengood-aio/ai-training"
Documentation = "https://github.com/opengood-aio/ai-training"
