[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengood.ai_training"
version = "1.0.0"
description = "Source for AI training for AI engineering and data science enablement"
authors = [
    { name = "OpenGood", email = "ai@opengood.ai" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "ipywidgets >= 8.1.7",
    "matplotlib >= 3.10.6",
    "nltk >= 3.9.1",
    "numpy >= 2.3.3",
    "openai >= 2.7.2",
    "opengood.py-ml-plot >= 2.3.0",
    "openpyxl >= 3.1.5",
    "pandas >= 2.3.2",
    "scikit-learn >= 1.7.2",
    "statsmodels >= 0.14.4",
    "tensorflow >= 2.20.0",
    "tf-keras >= 2.20.1",
    "torch >= 1.0.2",
    "transformers >= 4.56.2",
    "xgboost >= 3.0.5",
]

[project.urls]
Homepage = "https://github.com/opengood-aio/ai-training"
Documentation = "https://github.com/opengood-aio/ai-training"
